# csv-chart-plotter

./: BUILDING.md  README.md  build.py  main.py  pyproject.toml  sample.csv
.github/: copilot-instructions.md
.github/scripts/: README.md  monitor-dotnet-process.bat  monitor-dotnet-process.ps1
docs/: REQUIREMENTS_AND_DESIGN_SPECIFICATION.md
src/csv_chart_plotter/: __init__.py  chart_app.py  column_filter.py  csv_indexer.py  csv_monitor.py  logging_config.py  lttb.py  main.py  palettes.py
src/csv_chart_plotter/assets/: styles.css
tests/: __init__.py  conftest.py  test_chart_app.py  test_column_filter.py  test_csv_indexer.py  test_lttb.py  test_main.py
